feat: redis rate limit and check email and username endpoint
